#4165 - fixed an issue on mobile filters overlay where initiating a scroll from the header broke the UI composition

--- a/packages/scandipwa/src/component/Popup/Popup.style.scss
+++ b/packages/scandipwa/src/component/Popup/Popup.style.scss
@@ -131,6 +131,6 @@
     }
 
     @include mobile {
-        overflow-y: hidden;
+        overflow: hidden;
     }
 }
